tests/smt2/error/multi.smt2
(declare-fun f Bool)
(assert f)